kubernetes-networks/dashboard-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  loadBalancerIP: 172.16.255.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
