kubernetes-networks/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/app-root: /dashboard
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          #- path: /dashboard(/|$)(.*)
          - path: /dashboard
            #pathType: ImplementationSpecific
            pathType: Prefix
            backend:
              service:
                #name: dashboard-svc
                name: dashboard-nodeport
                port:
                  number: 9090
